style.css
/* ... */
.timeline-right-wow::before {
  border-color: transparent #b3ff00 transparent transparent;
}
.timeline-left::after {right: -27px;}
.timeline-right::after {left: -27px;}
.timeline-content {
  padding: 1rem;
  background-color: white;
  position: relative;
  border-radius: 0.25rem;
}
/* circle */
.circle {
  overflow: hidden;
  padding: 5px;
  margin: 1rem;
  border-radius: 50%;
  -moz-border-radius: 50%;
  -webkit-border-radius: 50%;
  border: #b3ff00 0.5rem solid;
  box-shadow: rgba(0, 0, 0, 0.3) 0 2px 7px 3px;
}
.circle img {
  height: 100%;
  width:100%;
  display: block;
  border-radius: 50%;
}
/* comments */
.comments {
  background-color: #ffffff;
  border-radius: 0.5rem;
-  box-shadow: rgba(0, 0, 0, 0.1) 0 2px 7px 3px;
  padding: 1rem 2rem 2rem 2rem;
  margin: 0.5rem;
}
.comments img {
  width: 100px;
  padding: 2px;
  /*border-radius: 50%;
  -moz-border-radius: 50%;
  -webkit-border-radius: 50%;
  border: #343a40 0.1rem solid;*/
}
.comments-name {font-size: 1.5rem; font-weight: bold;}
.comments-spec {font-size: 0.8rem; padding-top: 0.5rem; font-weight: bold;}
.comments-town {font-size: 1rem;}
.comments-text {font-size: 0.9rem; font-style: italic; text-align: center; line-height: 1.3}
.comments-img, .comments-desc {width: 100%; text-align: center;}
.block-video-text li {line-height: 1.3rem; padding-bottom: 1rem;}

.nav-logo {text-align: center;}

.arround-up {
  position: fixed;
  bottom: 1.2rem;
  right: 1.8rem;
  z-index: 10000;
}

/* mini */
@media only screen
and (max-width: 320px) {
  .main-logo {display: none;}
  .nav-button {display: none;}
  .footer-menu button {display: none;}
  .text-big {font-size: 1.2rem; line-height: 1;}
  .nav-logo img {width: 12rem;}
}
@media only screen
and (max-width: 499px) {
  .main-logo {display: none;}
  .comments {width: 100%;}
  .prev, .next {display: none;}
  .text-big {font-size: 1.2rem; line-height: 1;}
}
/* smartphone */
@media only screen
and (max-width: 599px) {
  .main-logo {display: none;}
  .wrapper {padding-top: 4rem;}
  .btn {
    display: inline-block;
    font-weight: 400;
    text-align: center;
    word-wrap: break-word;
    user-select: none;
    border: 1px solid transparent;
    padding: 0.375rem 0.75rem;
    line-height: 1.5;
    border-radius: 5rem;
    font-size: 0.75rem;
    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
  }
  .btn-mini {
    display: inline-block;
    font-weight: 400;
    text-align: center;
    word-wrap: break-word;
    user-select: none;
    border: 1px solid transparent;
    padding: 0.25rem 0.75rem;
    border-radius: 5rem;
    font-size: 0.75rem;
    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
  }
  .nav-head {
    width: 96%;
    padding: 0.5rem 0;
    word-wrap: break-word;
  }
  .nav-footer {
    width: 96%;
    padding: 0.5rem 0;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    word-wrap: break-word;
  }
  .nav-logo {padding: 0.25rem 0;}
  .nav-name {
    /*display: none;*/
    font-size: 0.75rem;
    line-height: 1.15;
    padding: 0.75rem 0;
    flex-basis: 100%;
    order: 1;
  }
  .nav-button {padding: 0;}
  .nav-menu {
    width: 96%;
    padding: 0.5rem 0;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    word-wrap: break-word;
    min-height: 4rem;
  }
  .nav-menu a {
    padding: 0.45rem 0.2rem;
    text-transform: uppercase;
    color: white;
    font-size: 0.7rem;
  }
  .border {border-right: 1px solid rgba(255, 255, 255, 0.25); margin: 0 0.2rem;}
  .footer-menu {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    z-index: 10000;
  }
  .container {width: 96%;}
  .promo {flex-wrap: nowrap; align-items: flex-start;}
  .promo-text {flex-basis: 0%; font-size: 1.7rem; line-height: 1.2; padding-top: 2rem;}
  .promo-text-big {flex-basis: 0%; font-size: 2.5rem; line-height: 1.2; padding-bottom: 1rem;}
  .nav-logo img {width: 10rem;}
  .promo-form {flex-basis: 100%; padding: 5vh 0 2vh 0; align-items: flex-start;}
  .store-logo {padding-top: 2rem;}
  .store-logo img {
    width: 36%;
    border-radius: 0.5rem;
    box-shadow: rgba(0, 0, 0, 0.25) 0 2px 2px 2px;
  }
  .modal-content {width: 330px;}
  .form-content .input-group {width: 100%;}
  .form-content input {height: 1.2rem; box-shadow: rgba(0, 0, 0, 0.25) 0 2px 2px 2px;}
  .form-content {padding-top: 1rem;}
  .timeline::after {left: 36px; bottom: 3rem;}
  .timeline-block {
    width: 100%;
    padding-left: 80px;
    padding-right: 25px;
  }
  .timeline-block::before {
    left: 70px;
    border: medium solid white;
    border-width: 10px 10px 10px 0;
    border-color: transparent white transparent transparent;
  }
  .timeline-block-4::before {
    left: 72px;
    border: medium solid #b3ff00;
    border-width: 10px 10px 10px 0;
    border-color: transparent #b3ff00 transparent transparent;
  }
  .timeline-block-6::before {
    left: 70px;
    border: medium solid #b3ff00;
    border-width: 10px 10px 10px 0;
    border-color: transparent #b3ff00 transparent transparent;
  }
  .timeline-left::after, .timeline-right::after {left: 8px;}
  .timeline-right {left: 0%;}
  .card-for {width: 90%;}
  .block-video-video, .block-video-text {width: 100%;}
  .block-contacts {padding: 2rem 0 3.5rem 0;}
  .block-contacts-text {width: 100%; text-align: center; padding-top: 20px;}
  .block-photo-map {width: 100%;}
  .block-contacts-photo {width: 100%;}
  .block-contacts-photo img {width: 100%;}
  .block-contacts-map {width: 100%;}
  .comments {width: 100%;}
  .audiocomm {display: none;}
  .anchor {padding-top: 5rem; margin-top: -5rem;}
}
  .text-big {font-size: 1.2rem; line-height: 1;}
/* ... */

